# tinyraytracer

./: .gitignore  BVH.cpp  BVH.h  CMakeLists.txt  color.h  geometry.h  main.cpp  material.h  scene.h  shapes.h  stb_image.h  tinyraytracer.sln  tinyraytracer.vcxproj  tinyraytracer.vcxproj.filters
gsl/: span
